# OssFileUploader

./: .gitignore  CMakeLists.txt  README.md
src/: CBase64Codec.cpp  CBase64Codec.h  HTTPClient.cpp  HTTPClient.h  HTTPMessage.cpp  HTTPMessage.h  ISocket.h  OSSFileUploader.cpp  OSSFileUploader.h  SSLClient.cpp  SSLClient.h  TCPClient.cpp  TCPClient.h  debugLog.cpp  debugLog.h  main.cpp  platform.h
thirdLib/include/openssl/: opensslconf.h
thirdLib/lib/linux/: libcrypto.so.1.1  libssl.so.1.1
